# slurm_accounting_free

./: .gitignore  NOTES.md  Pipfile  README.md  analyze_fundorg.py  fix_fundorg_file.py  generate_monthly_sreports.sh  isilon_rcm_disk_usage_maybe.sh  read_sreport.py  requirements.txt  setup.cfg  setup.py  update_grptresmins.sh
ExampleData/: courses.txt  mri_projects.txt  myorg_pis.csv  startup_projects.txt
slurm_accounting/: __main__.py  generate_monthly_sreports.py  isilon_rcm_disk_usage_maybe.py  rcm_disk_usage_maybe.py  setup_banking.py
slurm_accounting_free/: __main__.py  billing_report.py  update_grptresmins.py
