#!/usr/bin/env python3
[metadata]
name = slurm_accounting_free
version = 0.1.2
description = Generate usage reports from Slurm sreport output.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/prehensilecode/slurm_accounting_free
author = David Chin
author_email = 347755+prehensilecode@users.noreply.github.com
keywords = hpc, slurm, cluster
license = GPL version 3
license_files = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Topic :: System :: Logging
    Topic :: System :: Distributed Computing
    License :: OSI Approved :: GPL License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/prehensilecode/slurm_accounting_free

[bdist_wheel]
universal = 1

[options]
packages = find:
platforms = any
python_requires = >=3.10
install_requires =
    delorean>=1.0
    weasyprint==52.5

[options.packages.find]
exclude =
    contrib*
    docs*
    tests*

[options.entry_points]
console_scripts = 
    slurm_accounting_free = slurm_accounting_free.__main__:main
    generate_monthly_sreports = slurm_accounting_free.generate_monthly_sreports:main
    rcm_disk_usage_maybe = slurm_accounting_free.rcm_disk_usage_maybe:main
    isilon_rcm_disk_usage_maybe = slurm_accounting_free.isilon_rcm_disk_usage_maybe:main
    update_grptresmins = slurm_accounting_free.update_grptresmins:main
    setup_banking = slurm_accounting_free.setup_banking:main

